# haskell-euler

./: CHANGELOG.md  README.md  haskell-euler.cabal
app/: Main.hs
src/: Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs
test/: Main.hs
