cabal-version:      2.4
name:               haskell-euler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Puru Gupta
maintainer:         guptapuru304@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-euler
    main-is:          
        Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        Problem01,
        Problem02,
        Problem03

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.2.0,
        arithmoi
    hs-source-dirs:   app, src
    default-language: Haskell2010

Test-Suite test-euler
    type:       exitcode-stdio-1.0
    main-is:    Main.hs
    build-depends: 
        base,
        arithmoi
    hs-source-dirs: test, src

    other-modules: 
        Problem01,
        Problem02,
        Problem03